--- a/Project5/main2.css
+++ b/Project5/main2.css
@@ -4,14 +4,17 @@ body {
 .container {
   width: 90%;
   height: 600px;
-  border-radius: 20px;
   position: relative;
   margin-top: 5%;
   margin-left: 5%;
-  background-color: grey;
-  border-style: solid;
-  border-width: thick;
-  border-color: navy;
+  background-color: #15205A;
+}
+.floor {
+  position: absolute;
+  width: 100%;
+  height: 100px;
+  background-color: #050D34;
+  bottom: 0%;
 }
 .spotlight, .spotlight2 {
   position: absolute;
@@ -182,8 +185,8 @@ p {
   position: absolute;
   background-color: #B97E1C;
   width: 222px;
-  height: 50px;
-  top: 80%;
+  height: 25px;
+  top: 83%;
   left: 38.5%;
   border-radius: 50%;
   border-style: dotted;
@@ -442,7 +445,7 @@ p {
   left: 29.25%;
 }
 .mphone {
-  background-color: #242747;
+  background-color: #4A1071;
   width: 30px;
   height: 20px;
   position: absolute;
