--- a/Project3/css/mainFinal.css
+++ b/Project3/css/mainFinal.css
@@ -40,8 +40,8 @@ img {
 .pic1 {
   width: 50%;
   height: 500px;
-  background: url(../pictures/P2_pics/Almonds_8.jpg) no-repeat center center;
-  background-size: cover;
+  /* background: url(../pictures/P2_pics/Almonds_8.jpg) no-repeat center center;
+  background-size: cover; */
 }
 /* section divs */
 .introSection, .section2, .section3, .section4, .section5, .section6, .section7 {
@@ -85,8 +85,8 @@ img {
   width: calc(60%);
   height: 500px;
   float: left;
-  background: url(../pictures/P2_pics/Almonds_3.jpg) no-repeat center center;
-  background-size: cover;
+  /* background: url(../pictures/P2_pics/Almonds_3.jpg) no-repeat center center;
+  background-size: cover; */
   margin: 0 0 0 40%;
   position: relative;
 }
@@ -229,15 +229,24 @@ p {
 @media only screen and (max-width: 1024px) {
   .byline {
     bottom: 15px;
-    right: 150px;
+    right: 110px;
   }
   .titleAuthor {
     top: 100px;
     padding: 20px;
   }
+  h1 {
+    font-size: 58px;
+  }
   .introSection, .section2, .section3, .section4, .section5, .section6, .section7 {
     width: 100%;
     margin: 0 0 100px 0;
+  }
+  .number1 {
+    top: 300px;
+  }
+  .text1 {
+    margin-top: -100px;
   }
 }
 @media only screen and (max-width: 768px) {
@@ -245,10 +254,13 @@ p {
     height: 1200px;
     left: 110%;
   }
+  .number1 {
+    top: 200px;
+  }
   .byline {
     bottom: 0px;
     top: 50px;
-    right: 50px;
+    right: 40px;
   }
   h1 {
     font-size: 40px;
@@ -256,11 +268,14 @@ p {
   .titleAuthor {
     box-sizing: border-box;
     padding: 10px;
-    top: 140px;
+    top: 100px;
     right: 0px;
   }
+  h2 {
+    left: 16px;
+  }
   .pic1 {
-    height: 350px;
+    height: 250px;
   }
   h3 {
     font-size: 20px;
@@ -270,7 +285,7 @@ p {
     margin-left: 20%;
   }
   .section3 {
-    margin-bottom: 0px;
+    margin-bottom: 50px;
   }
   .introText {
     width: 100%;
@@ -288,6 +303,7 @@ p {
   }
   .pic3 {
     width: 100%;
+    height: 280px;
   }
   .text1 {
     width: 100%;
@@ -296,9 +312,6 @@ p {
   }
   h5 {
     font-size: 51px;
-  }
-  .number1 {
-    top: 425px;
   }
   .section3 {
     width: 100%;
@@ -335,7 +348,7 @@ p {
   .number3smallsizes {
     top: 380px;
     left: 360px;
-    padding: 75px 10px 0 10px;
+    padding: 50px 10px 0 10px;
     display: block;
   }
   .number3bigsizes {
@@ -393,6 +406,9 @@ p {
   }
 }
 @media only screen and (max-width: 504px) {
+  img {
+    border-bottom: 25px solid #D1C971;
+  }
   .greenShape2 {
     display: none;
   }
@@ -402,19 +418,23 @@ p {
   .byline {
     right: 50px;
   }
+  h2 {
+    font-size: 12px;
+    margin-top: 1px;
+  }
   .titleAuthor {
     box-sizing: border-box;
     width: 100%;
     padding: 10px;
-    top: 340px;
+    top: 360px;
     left: 0%;
     right: auto;
   }
   .pic1 {
     width: 100%;
     height: 350px;
-    border-style: solid;
-    border-color: #D1C971;
+    /* border-style: solid; */
+    /* border-color: #D1C971; */
   }
   .introSection, .section2, .section3, .section4, .section5, .section6, .section7 {
     width: 100%;
@@ -426,19 +446,19 @@ p {
   }
   .introText, .text3, .text5 {
     width: 90%;
-    margin: 150px 0 50px 30px;
+    margin: 100px 0 50px 30px;
   }
   .pic2smallsizes {
     width: 100%;
     margin-left: 0;
-    border-style: solid;
-    border-color: #D1C971;
+    /* border-style: solid; */
+    /* border-color: #D1C971; */
   }
   .pic3 {
     width: 100%;
     margin-left: 0;
-    border-style: solid;
-    border-color: #D1C971;
+    /* border-style: solid;
+    border-color: #D1C971; */
   }
   .text1, .text2, .text3, .text4, .text5, .text6 {
     width: 90%;
@@ -454,8 +474,8 @@ p {
   }
   .pic4 {
     width: 100%;
-    border-style: solid;
-    border-color: #D1C971;
+    /* border-style: solid;
+    border-color: #D1C971; */
   }
   .number2 {
     top: 210px;
@@ -467,8 +487,8 @@ p {
   }
   .pic5smallsizes {
     width: 100%;
-    border-style: solid;
-    border-color: #D1C971;
+    /* border-style: solid;
+    border-color: #D1C971; */
   }
   .number3smallsizes {
     top: 425px;
@@ -479,14 +499,14 @@ p {
     left: 420px;
   }
   .pic6 {
-    border-style: solid;
-    border-color: #D1C971;
+    /* border-style: solid;
+    border-color: #D1C971; */
   }
   .pic7smallsizes {
     width: 100%;
     left: 0%;
-    border-style: solid;
-    border-color: #D1C971;
+    /* border-style: solid;
+    border-color: #D1C971; */
   }
   .number5smallsizes {
     top: 255px;
@@ -495,7 +515,7 @@ p {
   .pic8 {
     width: 100%;
     margin-left: 0%;
-    border-style: solid;
-    border-color: #D1C971;
+    /* border-style: solid;
+    border-color: #D1C971; */
   }
 }
