--- a/Project5/main3.css
+++ b/Project5/main3.css
@@ -572,20 +572,42 @@ p {
   position: absolute;
 }
 .horizarm {
-  width: 35%;
+  width: 37%;
   height: 17%;
-  top: 33%;
-  left: 9%;
+  top: 23%;
+  left: -20%;
 }
 .vertarm {
-
+  width: 20%;
+  height: 35%;
+  left: 78%;
 }
 .vertleg {
-
+  width: 20%;
+  height: 35%;
+  top: 90%;
+  left: 25%;
 }
 .horizleg {
-
+  width: 39%;
+  height: 16%;
+  top: 83%;
+  left: 63%;
+}
+.tutu, .tutu2, .tutu3 {
+  background-color: #AEDE7A;
+  border-radius: 50%;
+  width: 125%;
+  height: 10%;
+  position: absolute;
+  left: -13%;
 }
 .tutu {
-
+  top: 50%;
+}
+.tutu2 {
+  top: 57%;
+}
+.tutu3 {
+  top: 64%;
 }
