--- a/Project5/main4.css
+++ b/Project5/main4.css
@@ -139,14 +139,18 @@ body {
 }
 .microphone {
   position: absolute;
+  width: 45px;
+  height: 150px;
+  top: 68%;
+  right: 5%;
 }
 .mstand {
   background-color: #3469A9;
   width: 7px;
   height: 100px;
   position: absolute;
-  top: 68%;
-  left: 83.25%;
+  top: 31%;
+  left: 33.25%;
 }
 .mphone {
   background-color: #A2A2A7;
@@ -154,13 +158,12 @@ body {
   height: 20px;
   position: absolute;
   border-radius: 20px;
-  top: 67.5%;
-  left: 77.75%;
+  top: 23%;
+  left: 2%;
 }
 .mbase {
   background-color: #3469A9;
-  top: 83%;
-  left: 78%;
+  top: 80%;
   width: 40px;
   height: 30px;
   position: absolute;
@@ -168,6 +171,11 @@ body {
 }
 .sheepbody {
   position: absolute;
+  width: 140px;
+  height: 80px;
+  top: 80%;
+  left: 20%;
+  background-color: blue;
 }
 .circle, .circle2, .circle3, .circle4, .circle5, .circle6, .circle7, .circle9, .circle10, .circle11 {
   position: absolute;
