--- a/Project5/main4.css
+++ b/Project5/main4.css
@@ -175,7 +175,6 @@ body {
   height: 80px;
   top: 81%;
   left: 20%;
-  background-color: blue;
 }
 .circle, .circle2, .circle3, .circle4, .circle5, .circle6, .circle7, .circle9, .circle10, .circle11 {
   position: absolute;
@@ -187,46 +186,42 @@ body {
 .circle {
   top: 0%;
   right: 0%;
-  background-color: black;
 }
 .circle2 {
   top: 0%;
   right: 15%;
-  background-color: black;
 }
 .circle3 {
   top: 0%;
   right: 30%;
-  background-color: black;
 }
 .circle4 {
   top: 0%;
   right: 45%;
-  background-color: black;
 }
 .circle5 {
-  top: 75%;
-  left: 56%;
+  top: 30%;
+  right: 8%;
 }
 .circle6 {
-  top: 75%;
-  left: 47%;
+  top: 30%;
+  right: 18%;
 }
 .circle7 {
-  top: 75%;
-  left: 38%;
+  top: 30%;
+  right: 28%;
 }
 .circle9 {
-  top: 75%;
-  left: 53%;
+  top: 30%;
+  right: 38%;
 }
 .circle10 {
-  top: 75%;
-  left: 42%;
+  top: 30%;
+  right: 48%;
 }
 .circle11 {
-  top: 75%;
-  left: 33%;
+  top: 0%;
+  right: 58%;
 }
 .tail {
   position: absolute;
@@ -234,8 +229,8 @@ body {
   width: 15px;
   height: 23px;
   border-radius: 50%;
-  top: 69%;
-  left: 32.5%;
+  top: -18%;
+  left: 17%;
 }
 /* .shead {
   background-color: #473724;
@@ -253,24 +248,24 @@ body {
 .sleg, .sleg2 {
   width: 10px;
   height: 40px;
-  top: 80%;
+  bottom: -4%;
 }
 .sleg3, .sleg4 {
   width: 8px;
   height: 35px;
-  top: 80%;
+  bottom: -4%;
 }
 .sleg {
-  left: 59.5%;
+  right: 19.5%;
 }
 .sleg2 {
-  left: 53%;
+  right: 29%;
 }
 .sleg3 {
-  left: 42%;
+  right: 46%;
 }
 .sleg4 {
-  left: 47.5%;
+  right: 54%;
 }
 /* CENTERSTAGE */
 .centerstage {
