--- a/Project5/main4.css
+++ b/Project5/main4.css
@@ -276,10 +276,10 @@ body {
   background-color: red;
 }
 .lamp2 {
-  left: 41%;
+  left: 28%;
 }
 .spotlight2 {
-  left: 38%;
+  left: 25%;
   animation-name: spotlight2;
   animation-duration: 3s;
   animation-iteration-count: infinite;
@@ -292,15 +292,10 @@ body {
 }
 .girlhead {
   position: absolute;
-}
-.hair {
-  position: absolute;
-  background-color: #6D2A06;
-  width: 145px;
-  height: 140px;
-  border-radius: 50%;
-  top: 25%;
-  left: 41.85%;
+  top: 30%;
+  left: 21%;
+  width: 200px;
+  height: 150px;
 }
 .brim {
   position: absolute;
@@ -308,17 +303,26 @@ body {
   width: 170px;
   height: 15px;
   border-radius: 50%;
-  top: 28.5%;
-  left: 41%;
+  top: 10%;
+  left: 8%;
 }
 .hattop {
   width: 110px;
   height: 40px;
   border-radius: 5px;
-  top: 23%;
-  left: 43.15%;
+  top: -13%;
+  left: 23.55%;
   background-color:#7DD3B1;
   position: absolute;
+}
+.hair {
+  position: absolute;
+  background-color: #6D2A06;
+  width: 145px;
+  height: 140px;
+  border-radius: 50%;
+  top: 5%;
+  left: 15%;
 }
 .face {
   position: absolute;
@@ -326,8 +330,8 @@ body {
   width: 110px;
   height: 110px;
   border-radius: 50%;
-  top: 28%;
-  left: 43.15%;
+  top: 19%;
+  left: 24.15%;
 }
 .eye {
   position: absolute;
@@ -335,16 +339,16 @@ body {
   width: 10px;
   height: 10px;
   border-radius: 50%;
-  top: 35.75%;
-  left: 45%;
+  top: 48%;
+  left: 36%;
   animation-name: eye;
   animation-duration: 2.5s;
   animation-iteration-count: infinite;
 }
 @keyframes eye {
-0% {left: 45%;}
-50% {left: 44.75%;}
-100% {left: 45%;}
+0% {left: 36%;}
+50% {left:38%;}
+100% {left: 36%;}
 }
 .eye2 {
   position: absolute;
@@ -352,16 +356,16 @@ body {
   width: 10px;
   height: 10px;
   border-radius: 50%;
-  top: 35.75%;
-  left: 48%;
+  top: 48%;
+  left: 51%;
   animation-name: eye2;
   animation-duration: 2.5s;
   animation-iteration-count: infinite;
 }
 @keyframes eye2 {
-0% {left: 48%;}
-50% {left: 47.75%;}
-100% {left: 48%;}
+0% {left: 51%;}
+50% {left: 53%;}
+100% {left: 51%;}
 }
 .nose {
   position: absolute;
@@ -369,8 +373,8 @@ body {
   width: 12px;
   height: 15px;
   border-radius: 50%;
-  top: 38%;
-  left: 46.45%;
+  top: 58%;
+  left: 44%;
 }
 .bangs {
   position: absolute;
@@ -378,11 +382,30 @@ body {
   width: 73px;
   height: 45px;
   border-radius: 5px;
-  top: 27%;
-  left: 44.5%;
+  top: 9%;
+  left: 33%;
+}
+.eyebrow, .eyebrow2 {
+  background-color: #6D2A06;
+  position: absolute;
+  width: 12px;
+  height: 3px;
+  border-radius: 50%;
+  top: 42.5%;
+}
+.eyebrow {
+  left: 36%;
+}
+.eyebrow2 {
+  left: 51%;
 }
 .girlbody {
   position: absolute;
+  background-color: green;
+  width: 200px;
+  height: 120px;
+  top: 75%;
+  left: 28%;
 }
 .skirt {
   position: absolute;
@@ -440,19 +463,22 @@ body {
 }
 .piano {
   position: absolute;
+  top: 65%;
+  width: 350px;
+  height: 160px;
 }
 .music {
   position: absolute;
   background-color: #932B26;
   width: 140px;
   height: 80px;
-  top: 41%;
-  left: 42%;
+  top: -50%;
+  left: 29%;
 }
 .text {
   position: absolute;
-  top: 42%;
-  left: 48.75%;
+  top: -48%;
+  left: 54%;
 }
 p {
   font-size: 12px;
@@ -464,32 +490,30 @@ p {
   background-color: #A2A2A7;
   width: 3px;
   height: 80px;
-  top: 41%;
-  left: 47.25%;
+  top: -49.6%;
+  left: 49%;
 }
 .peg {
   position: absolute;
   background-color: black;
   width: 7px;
   height: 45px;
-  top: 48%;
-  left: 44%;
+  top: -27%;
+  left: 40%;
 }
 .peg2 {
   position: absolute;
   background-color: black;
   width: 7px;
   height: 45px;
-  top: 48%;
-  left: 50.25%;
+  top: -27%;
+  left: 57%;
 }
 .pbody {
   position: absolute;
   background-color: black;
   width: 350px;
   height: 75px;
-  top: 52%;
-  left: 34%;
   border-radius: 5px;
 }
 .rug {
@@ -497,8 +521,8 @@ p {
   background-color: #B97E1C;
   width: 222px;
   height: 25px;
-  top: 83%;
-  left: 38.5%;
+  bottom: 0%;
+  left: 18.5%;
   border-radius: 50%;
   border-style: dotted;
   border-color: #95630F;
@@ -508,32 +532,32 @@ p {
   background-color: black;
   width: 30px;
   height: 130px;
-  top: 64%;
-  left: 36%;
+  bottom: -10%;
+  left: 10%;
 }
 .pleg2 {
   position: absolute;
   background-color: black;
   width: 30px;
   height: 130px;
-  top: 64%;
-  left: 56.5%;
+  bottom: -10%;
+  right: 10%;
 }
 .chairleg {
   position: absolute;
   background-color: brown;
   width: 17px;
   height: 85px;
-  top: 72%;
-  left: 43%;
+  bottom: -5%;
+  left: 33%;
 }
 .chairleg2 {
   position: absolute;
   background-color: brown;
   width: 17px;
   height: 85px;
-  top: 72%;
-  left: 51.5%;
+  bottom: -5%;
+  left: 63%;
 }
 /* PIG */
 .pigspace {
