--- a/Project5/main4.css
+++ b/Project5/main4.css
@@ -401,10 +401,9 @@ body {
 }
 .girlbody {
   position: absolute;
-  background-color: green;
   width: 150px;
-  height: 120px;
-  top: 72%;
+  height: 80px;
+  top: 79.15%;
   left: 28%;
 }
 .skirt {
@@ -412,8 +411,7 @@ body {
   background-color: #621941;
   width: 150px;
   height: 45px;
-  top: 30%;
-  left: 0%;
+  top: 10%;
   border-radius: 5px;
 }
 .skirttop {
@@ -421,27 +419,23 @@ body {
   background-color: #751F4E;
   width: 150px;
   height: 23px;
-  top: 64.5%;
-  left: 42%;
+  top: 0%;
+  left: 0%;
   border-radius: 5px;
 }
-.leg {
+.leg, .leg2 {
   position: absolute;
   background-color: #F0CD9F;
-  width: 27px;
-  height: 100px;
-  top: 68%;
-  left: 44%;
+  width: 25px;
+  height: 90px;
+  top: 0%;
   border-radius: 15%;
 }
+.leg {
+  left: 25%;
+}
 .leg2 {
-  position: absolute;
-  background-color: #F0CD9F;
-  width: 27px;
-  height: 100px;
-  top: 68%;
-  left: 49.5%;
-  border-radius: 15%;
+  left: 55%;
 }
 .shoe {
   position: absolute;
@@ -449,7 +443,7 @@ body {
   width: 40px;
   height: 29px;
   top: 82%;
-  left: 48.65%;
+  left: 16%;
   border-radius: 5px;
 }
 .shoe2 {
@@ -458,7 +452,7 @@ body {
     width: 40px;
     height: 29px;
     top: 82%;
-    left: 43.75%;
+    left: 54%;
     border-radius: 5px;
 }
 .piano {
@@ -557,7 +551,7 @@ p {
   width: 17px;
   height: 85px;
   bottom: -5%;
-  left: 63%;
+  left: 61%;
 }
 /* PIG */
 .pigspace {
