--- a/Project5/main4.css
+++ b/Project5/main4.css
@@ -1,6 +1,9 @@
 body {
   margin: 0;
 }
+.hidden {
+  display: none;
+}
 .container {
   width: 90%;
   height: 600px;
@@ -15,12 +18,22 @@ body {
   width: 100%;
   height: 50px;
 }
+.curtaintop:hover {
+  cursor: pointer;
+}
+.lightSwitch {
+  opacity: 0;
+}
+.curtainUp {
+  bottom: 550px;
+}
 .curtain {
   background-color: #811212;
   width: 100%;
   position: absolute;
   height: 550px;
   bottom: 0%;
+  transition: bottom 1s ease; height 1s ease;
 }
 .floor {
   position: absolute;
@@ -36,6 +49,7 @@ body {
   border-bottom: 435px solid #FAF79D;
   width: 130px;
   top: 11%;
+  transition: opacity 10s ease;
 }
 .lamp, .lamp2, .lamp3 {
   background-color: black;
