--- a/Project5/main4.css
+++ b/Project5/main4.css
@@ -756,6 +756,11 @@ p {
   top: 82.5%;
   left: 82%;
 }
+@media only screen and (min-width: 1440px) {
+  .container {
+    width: 1300px;
+  }
+}
 @media only screen and (max-width: 1024px) {
   .sheepspace {
     left: 0%;
